--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,15 +2,15 @@ feign:
   client:
     config:
       feignName:
-        connectTimeout: 5000
-        readTimeout: 5000
+        connectTimeout: 500
+        readTimeout: 500
         loggerLevel: full
-        errorDecoder: com.example.SimpleErrorDecoder
-        retryer: com.example.SimpleRetryer
-        requestInterceptors:
-          - com.example.FooRequestInterceptor
-          - com.example.BarRequestInterceptor
-        decode404: false
-        encoder: com.example.SimpleEncoder
-        decoder: com.example.SimpleDecoder
-        contract: com.example.SimpleContract
+        errorDecoder: com.example.feignclient.error.FeignErrorDecoder
+        #retryer: com.example.SimpleRetryer
+          #requestInterceptors:
+          #- com.example.FooRequestInterceptor
+        #- com.example.BarRequestInterceptor
+        #decode404: false
+        #encoder: com.example.SimpleEncoder
+        #decoder: com.example.SimpleDecoder
+        #contract: com.example.SimpleContract
